package LabFive;

public class ScoreListException extends Exception {
	public ScoreListException(String msg){
		super(msg);
	}
}
